# SDL_input

./: README.md  meson.build  meson_options.txt
include/: action_manager.h  input_manager.h
src/: action_manager.c  input_manager.c  std_definitions.h
